# agent-routing-eval-lab

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_gap.yml  feature_proposal.yml
.github/workflows/: tests.yml
demo_logs/ling_decisions/: ling_decisions_2026-06-06.csv
docs/: architecture.md  cli.md  consultant_playbook.md  evaluation_methodology.md  further-reading.md  glossary.md  input-schema.md  json-schema.md  ling_integration.md  non-goals.md  shareable-summary.md
examples/: ling_integration_demo.py  ling_tool_catalog.yaml  logged_decisions.sample.csv  tool_catalog.yaml
examples/policy_candidates/: baseline.yaml  contextweaver_v1.yaml  contextweaver_v2.yaml  cost_aware.yaml  ling_triage_v1.yaml  strict_policy.yaml
reports/: example_report.md  ling_evaluation_demo.md
src/agent_routing_eval_lab/: __init__.py  cli.py  io_utils.py  warnings.py
src/agent_routing_eval_lab/adapters/: __init__.py  contextweaver_adapter.py  ling_eval_adapter.py  skdr_eval_adapter.py
src/agent_routing_eval_lab/data/: __init__.py  generate_synthetic_logs.py  ling_decision_logger.py  safety_rules.py  schemas.py
tests/: test_cli.py  test_cli_docs_parity.py  test_diff.py  test_evaluator.py  test_gates.py  test_io_utils.py  test_ling_integration.py  test_metrics.py  test_ranking.py  test_report.py  test_routers.py  test_safety_rules.py  test_serialization.py  test_synthetic_data.py  test_validation.py  test_warnings.py
(+15 files in other folders)
