[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-routing-eval-lab"
version = "0.1.0"
description = "Offline evaluation lab for agent routing and tool-selection policies before production."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "agent-routing-eval-lab contributors"}]
license = {file = "LICENSE"}
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
agent-routing-eval-lab = "agent_routing_eval_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
